<resources>

    <string name="app_name">MyBurgerNow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lb_commander">COMMANDER</string>
    <string name="lb_livrer">LIVRER</string>
    <string name="lb_baseline">baseline</string>
    <string name="lb_terminer">TERMINE</string>
    <string name="title_activity_login">Se conecter</string>
    <string name="lb_se_connecter">SE CONNECTER</string>
    <string name="lb_email">E–mail</string>
    <string name="lb_mot_de_passe">Mot de passe</string>
    <string name="lb_mot_de_passe_oublier">MOT DE PASSE OUBLIE</string>
    <string name="lb_creer_un_compte">CREER UN COMPTE</string>
    <string name="lb_connection">CONNECT</string>
    <string name="lb_tt_erreur_mdp">ERREUR DE MOT DE PASSE</string>
    <string name="lb_tt_echec_de_connexion">ERREUR DE CONNEXION</string>

    <string name="lb_tt_erreur_email">ERREUR DE  MAIL</string>
    <string name="lb_tt_instruction_email_err">Mail non valide</string>
    <string name="lb_tt_instruction_mdp_err">le mot de passe doit etre au moins 5 caractère</string>
    <string name="lb_tt_echec_instruction">compte ou mot de passe invalide </string>
    <string name="title_activity_client">Map</string>
    <string name="lb_lieu_livraison">LIEU DE LIVRAISON</string>
    <string name="lb_changer">CHANGER</string>
    <string name="lb_personnel">PERSONNEL</string>
    <string name="lb_panier_vide">PANIER VIDE</string>
    <string name="lb_creer_commande">CREER SA COMMANDE</string>
    <string name="lb_temp_attente">LE TEMP D ATTENTE EST D ENVIRON</string>
    <string name="lb_temp_attente_client">LE CLIENT ATTEND SA LIVRAISON DANS</string>
    <string name="tt_moyen_payement">MOYENS DE PAYEMENT</string>
    <string name="tt_ajout_moyen_payement">AJOUTER UN MOYEN DE PAIEMENT</string>
    <string name="lb_commande_valide">COMMANDE VALIDEE</string>
    <string name="lb_votre_livreur">Votre livreur:</string>
    <string name="lb_tt_liv_a_des">LE LIVREUR EST ARRIVE A DESTINATION VEUILLEZ LE REJOINDRE</string>
    <string name="lb_sous_total">Sous–total</string>
    <string name="title_activity_client_commande">Map</string>
    <string name="title_activity_liveruer">LiveruerActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_choix_typ_livreur">ChoixTypLivreurActivity</string>
    <string name="title_activity_livreur">LivreurActivity</string>
    <string name="title_activity_carte">Map</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_activity_page">PageActivity</string>
    <string name="title_activity_liv">LivActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_p503">P503Activity</string>
    <string name="google_app_id">594165073865-lmsqbkq7tm9s3ifd6p75fk9b59e5999i.apps.googleusercontent.com</string>

    <string name="msg_locaction">Internet and Location Services Permission required for this app</string>
    <string name="msg_g_setting">Go to settings and enable permissions</string>
    <string name="msg_ok">Ok</string>
    <string name="msg_oui">OUI</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_permission_autorise">Permission autorisée</string>
    <string name="msg_attente_comande">Recherche de clients en cours veuillez patienter</string>
    <string name="msg_attente_conf">Veuillez patienter le client &lt;br /&gt; effectue son paiement</string>
    <string name="msg_vers_resto">Paiement client effectué &lt;br /&gt; vous pouvez aller chercher la commande</string>
    <string name="msg_vers_liv">Rendez-vous au lieu de livraison</string>
    <string name="msg_att_client">Attendez le client, demandez lui le code rencontre &lt;br /&gt; remettez lui sa commande</string>
    <string name="msg_aucun">aucun</string>
    <string name="msg_notif">Demande de livraison</string>
    <string name="msg_payment_effectue">Le paiement du client a été refusé &lt;br /&gt; livraison annulée</string>
    <string name="msg_back_exit">Appuyez de nouveau sur BACK pour quitter</string>
    <string name="msg_commande">COMMANDE</string>
    <string name="msg_code_de_renc">Code rencontre</string>
    <string name="msg_fix_prix_vide">PRIX VIDE</string>
    <string name="msg_title_deco">DECONNEXION</string>
    <string name="msg_title_etapes">Mes étapes</string>
    <string name="msg_deco">Etes-vous sur de vouloir vous déconnecter?</string>
    <string name="msg_je_livre">Je livre:</string>
    <string name="msg_radio_pied">à pied</string>
    <string name="msg_radio_roulette">à roulette</string>
    <string name="msg_radio_moteur">à moteur</string>
    <string name="msg_btn_send">Envoyer</string>
    <string name="msg_question_fixprix">Avez-vous payé </string>
    <string name="msg_question_fixmp">Montant payé</string>
    <string name="msg_question_sinon_fixprix">Sinon veuillez saisir la valeur svp:</string>
    <string name="msg_produit">Produits: </string>
    <string name="msg_a_payer">Prix estimatif: </string>
    <string name="msg_tel_cli">Tel client: </string>
    <string name="msg_etape_addr_liv">Je suis arrivé à l\'adresse de livraison</string>
    <string name="msg_etape_fastfood">J\'ai la commande, je pars du fast food</string>
    <string name="msg_etape_go_fastfood">Je suis arrivé au fast food</string>
    <string name="msg_localisation_encours">Localisation en cours</string>
    <string name="msg_localisation_troploin">Vous êtes trop loin du fast food</string>
    <string name="msg_livraison_effectue">Livraison effectuée!</string>
    <string name="msg_chez_client">Chez le client!</string>

</resources>
