<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="my.burger.now.app.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText_email"
            android:background="@drawable/borderinput"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/lb_email"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_password"
            android:background="@drawable/borderinput"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="30dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/lb_mot_de_passe"
            android:inputType="textPassword" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_je_livre"
                android:id="@+id/textView5" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radiog">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_radio_pied"
                    android:id="@+id/radioButtonApied"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_radio_roulette"
                    android:id="@+id/radioButtonAroulette" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_radio_moteur"
                    android:id="@+id/radioButtonAmoteur" />
            </RadioGroup>

        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_connection"
            android:id="@+id/btn_connect"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_style"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="toAceuil" />
    </LinearLayout>

</RelativeLayout>
