<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/msg_produit"
                android:id="@+id/textView12"
                android:layout_marginLeft="20dp"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/commandeList"
                android:layout_weight="1.00"
                android:gravity="center_vertical"
                android:layout_marginLeft="60dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.21">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/msg_a_payer"
                    android:id="@+id/textView10"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/prix"
                    android:layout_weight="1.00"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:clickable="true"
                android:id="@+id/callph"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/msg_tel_cli"
                    android:id="@+id/textView8"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tel"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="0.10">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_ok"
                    android:id="@+id/buttonOk"
                    android:layout_weight="0.50"
                    android:background="@drawable/button_style"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
