<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/msg_question_fixprix"
                    android:id="@+id/textView9"
                    android:layout_weight="0.99"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="12dp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_margin="20dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/prxf"
                    android:layout_weight="1.02"
                    android:gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_oui"
                    android:id="@+id/buttonOUI"
                    android:background="@drawable/button_style"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/modalprixreel">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/msg_question_sinon_fixprix"
                    android:id="@+id/textView3"
                    android:layout_weight="0.99"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="12dp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_margin="20dp" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextRM"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_margin="20dp"
                    android:gravity="right">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_btn_send"
                        android:id="@+id/buttonNON"
                        android:background="@drawable/button_style"
                        android:textStyle="bold"
                        android:textSize="9dp"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
    </ScrollView>



</RelativeLayout>
